2016-04-17         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (pty1): Really disable test on z/OS.

2016-04-11         Arnold D. Robbins     <arnold@skeeve.com>

	* clos1way2.ok, clos1way3.ok, clos1way4.ok, clos1way5.ok: Update
	after Eli's code changes.
	* Makefile.am (pty1): Disable test on z/OS.

2016-04-08  Eli Zaretskii  <eliz@gnu.org>

	* clos1way2.awk:
	* clos1way3.awk:
	* clos1way4.awk:
	* clos1way5.awk: Use "&&" instead of ";" to chain commands, so
	that it works with stock MS-Windows shells as well.
	* clos1way2.ok: Adjust the error message to the change in command.

2016-04-08         Arnold D. Robbins     <arnold@skeeve.com>

	* watchpoint1: Use $(srcdir) on input file so out-of-tree
	builds can run the test suite.

2016-04-07         Arnold D. Robbins     <arnold@skeeve.com>

	* clos1way2.ok, clos1way3.ok, clos1way4.ok: Updated after
	code changes.

2016-04-04         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (clos1way2, clos1way3, clos1way4, clos1way5):
	New tests.
	* clos1way2.awk, clos1way2.in, clos1way2.ok, clos1way3.awk,
	clos1way3.ok, clos1way4.awk, clos1way4.ok, clos1way5.awk,
	clos1way5.ok: New files.
	* clos1way2.awk: Add call to fflush() to test it too.
	* clos1way2.ok: Updated after code change.

2016-02-18         Arnold D. Robbins     <arnold@skeeve.com>

	* profile2.ok, profile5.ok: Adjust after code changes.

2016-01-14         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (aryprm9): New test.
	* aryprm9.awk, aryprm9.ok: New files.

	Unrelated:

	* ChangeLog: Remove spurious whitespace.

2015-12-27         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (profile8): New test.
	* profile8.awk, profile8.ok: New files.

2015-11-24         Arnold D. Robbins     <arnold@skeeve.com>

	* Makefile.am (watchpoint1): New test.
	* watchpoint1.awk, watchpoint1.in, watchpoint1.ok,
	watchpoint1.script: New files.

2015-10-28         Arnold D. Robbins     <arnold@skeeve.com>
