@@ -1,3 +1,7 @@
+2016-04-24         Arnold D. Robbins     <arnold@skeeve.com>
+
+	* Makefile.am (pty1): Ignore errors.
+
 2016-04-17         Arnold D. Robbins     <arnold@skeeve.com>
 
 	* Makefile.am (pty1): Really disable test on z/OS.
